Fixed the overlapping issue and made it much responsive

--- a/30DaysOfJavaScript/style.css
+++ b/30DaysOfJavaScript/style.css
@@ -120,6 +120,7 @@ body.light-mode svg {
 }
 
 .toggleButton {
+  display: inline-block;
   position: absolute;
   top: 0;
   margin: 10px 3px 3px 10px;
@@ -128,6 +129,7 @@ body.light-mode svg {
   border-radius: 50%;
   font-size: 30px;
   left: 0;
+  
 }
 
 html.transition,
@@ -284,6 +286,8 @@ footer a:visited {
 }
 
 input {
+  display: inline-block;
+  margin: 10px;
   border-radius: 25px;
   padding: 10px;
   width: 15%;
@@ -385,13 +389,6 @@ header {
     font-size: 20px;
   }
 }
-
-@media (min-width: 400px) {
-  h1 {
-    font-size: 1.3rem;
-  }
-}
-
 @media (min-width: 600px) {
   h1 {
     font-size: 1.6rem;
@@ -407,5 +404,106 @@ header {
 @media (min-width: 1000px) {
   h1 {
     font-size: 2.2rem;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  h1 {
+    text-align: left;
+  }
+  
+  #searchbar, .toggleButton {
+    display: block;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 320px) {
+  h1 {
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+}
+
+  .dark-btn {
+    padding: 4px 8px;
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+  
+  .search-container {
+    padding: 4px;
+  }
+  
+  .search-input {
+    font-size: 14px;
+  }
+
+@media screen and (max-width: 530px) {
+  h1 {
+    font-size: 20px;
+    margin-top: 25px;
+  }
+}
+@media screen and (max-width: 571px) {
+  h1 {
+    font-size: 20px;
+    margin-top: 25px;
+  }
+}
+@media screen and(max-width: 571px) {
+  input{
+    margin-top: 10px;
+  }
+}
+@media screen and (max-width: 426px) {
+  h1 {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 382px) {
+  h1 {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 340px) {
+  h1 {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 302px) {
+  h1 {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 278px) {
+  h1 {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 240px) {
+  h1 {
+    font-size: 12px;
+  }
+}@media screen and (max-width: 200px) {
+  h1 {
+    font-size: 11px;
+  }
+}@media screen and (max-width: 160px) {
+  h1 {
+    font-size: 10px;
+  }
+}@media screen and (max-width: 120px) {
+  h1 {
+    font-size: 9px;
+  }
+}
+@media screen and (max-width: 80px) {
+  h1 {
+    font-size: 8px;
+  }
+}
+@media screen and (max-width: 40px) {
+  h1 {
+    font-size: px;
   }
 }
